refactor, test: 추가 단계에서 모자 중복 포함 문제 해결, 관련 테스트 시나리오 추가